# FPGA_Mining_AWS

./: README.md
fpga_miner_aws/: CMakeLists.txt  README.md  api.c  fpga-miner.c  fpga_miner  fpgautils.c  fpgautils.h  miner.h  run_grs.sh  run_phi.sh  run_phi3.sh  run_phi_2.sh  run_poly.sh  run_skunk.sh  run_tribus.sh  util.c
fpga_miner_aws/algo/: blakecoin.c  decred.c  groestl.c  myr-groestl.c  nist5.c  phi.c  poly.c  skunk.c  tribus.c
fpga_miner_aws/api/: API.java  websocket.htm
fpga_miner_aws/compat/: winansi.c  winansi.h
fpga_miner_aws/compat/jansson/: CMakeLists.txt
fpga_miner_aws/sha3/: haval_helper.c  keccak.c  sph_keccak.h
grs/: grostl512.v  miner.v  miner_top.v  mix_bytes.v  permutation_p.v  permutation_q.v
myr_grs/: grostl512.v  miner.v  miner_top.v  mix_bytes.v  permutation_q.v  sha256_pipes2.v
phi1612/: cl_miner_defines.vh  cube.v  echo.v  fugue.v  fugue_smix.v  jh.v  miner.v  miner_top.v  skein.v
skunk/: cl_miner_defines.vh  cube.v  fugue.v  fugue_smix.v  gost.v  miner.v  miner_top.v  skein.v
tribus/: echo.v  jh.v  keccak.v  miner.v  miner_top.v
